<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent" android:layout_width="match_parent"
              android:orientation="vertical" style="padd" android:paddingStart="@dimen/padding"
              android:paddingEnd="@dimen/padding">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/name_text"
              android:text="@string/name"
              android:textAlignment="center"
              style="@style/Name_Style"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nickname_Edit" style="@style/Name_Style" android:textAlignment="center"
            android:hint="@string/what_is_your_nickname"/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/nickname_text" style="@style/Name_Style"
            android:textAlignment="center" android:visibility="gone"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/star_image" android:contentDescription="@string/yellow_star"
            android:layout_marginTop="@dimen/layout_margin"/>
    <Button
            android:text="Ron!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ron_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/bio_scroll">

        <TextView
                android:text="@string/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/bio_text" style="@style/Name_Style"
                tools:text="@string/bio"
                android:lineSpacingMultiplier="1.2" android:paddingBottom="@dimen/padding"/>
    </ScrollView>


</LinearLayout>
